# eastecho.org

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  manage.py  package-lock.json  package.json  setup.cfg  webpack.config.js
docker/: Dockerfile  docker-compose.yml  init-letsencrypt.sh  migrate.sh  uwsgi.ini
docker/nginx/: Dockerfile
docker/nginx/etc/nginx/: nginx.conf
docker/nginx/etc/nginx/conf.d/: gzip.conf  proxy.conf
docker/nginx/etc/nginx/sites-enabled/: default
eastecho/: __init__.py  settings.py  urls.py  wsgi.py
eastecho/clubs/: apps.py  models.py
eastecho/site/: admin.py  apps.py  instagram.py  middleware.py  models.py  urls.py  views.py
eastecho/site/templates/: auth.html  base.html  club.html  clubs.html  events.html  index.html  side-nav.html  this-week.html  top-nav.html
etc/: docker-compose@.service
src/scss/: layout.scss  navbar.scss  sidebar.scss  site.scss  variables.scss
