[metadata]
name = eastecho
version = attr: eastecho.version
description = Centralized Events Portal for Central High School East
long_description = file: README.rst
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  manage.py
install_requires =
  arrow
  django
  django-autoslug
  instagram
  pillow
  pinax-blog
