[metadata]
name = eastecho
version = attr: eastecho.version
description = Centralized Events Portal for Central High School East
long_description = file: README.rst
license = BSD 3-Clause License
author = Gavin M. Roy
author_email = gmr@poisonpenllc.com
url = https://github.com/easteacho
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
packages = find:
scripts =
  manage.py
install_requires =
  arrow==0.15.2
  django==2.2.5
  django-autoslug==1.9.6
  django-ckeditor==5.7.1
  django-instagram==0.3.0
  pillow==6.1.0
  psycopg2-binary==2.8.3
  python-memcached==1.59
tests_require =
  flake8
  flake8-comprehensions
  flake8-deprecated
  flake8-html
  flake8-import-order
  flake8-quotes
  flake8-rst-docstrings
  flake8-tuple

[flake8]
application-import-names=eastecho
exclude =
  docker
  env
  etc
  node_modules
  src
  eastecho/site/media/
  eastecho/site/migrations/
  eastecho/site/static/
  eastecho/site/templates/
import-order-style=google
